html_css/css/main.css
body {
  font-family: 'Lato', sans-serif;
  background-color: rgba(255, 255, 254, 1.0);
  color: rgba(30, 35, 35, 1.0);
  padding: 0;
  margin: auto;
}

#content {
  padding: 0 16%;
  border: 0;
}

img {
  border: none;
}

p.Oswald-pre {
  font-family: 'Oswald', sans-serif;
  font-size: 1.2rem;
}

ul {
  list-style: none;
  text-decoration: none;
}

section {
  margin: 1em 0;
  padding: 0.5em 0;
  border-top: 1px solid #333;
}
section h1 {
  font-weight: bold;
  font-family: "Oswald";
  font-size: 1.8rem;
  margin: 0.5rem 0;
}

section h2 {
  font-size: 1.45rem;
}

section h3 {
  font-weight: normal;
  margin-bottom: 0.5em;
}

section h1 b, section h2 b, section h3 b {
  font-family: "Lato";
  font-size: 1.0rem;
  font-weight: normal;
  color: rgba(135, 135, 135, 1.0);
}

section code {
  display: inline-block;
  background-color: rgba(230, 230, 230, 1.0);
  padding: 0.5em 0.75em;
}

/* Links */

section a {
  color: rgba(255, 110, 0, 1.0);
}

section a:hover, nav ul li a:hover {
  color: rgba(30, 35, 35, 1.0);
  transition: color 0.2s ease-in-out;
}

/* buttons */

#buttons li {
  display: inline-block;
  padding: 1.0rem;
}

a.btn {
  display: inline-block;
  padding: 1.0rem;
  border-radius: 0.25em;
  text-decoration: none;
  color: rgba(255, 255, 255, 1.0);
  -webkit-transition: background-color 0.5s ease-out;
  transition: color 0.5s ease-out;
  transition: background-color 0.5s ease-out;

}

a.submit {
  background-color: rgba(50, 169, 247, 1.0);
}

a.submit:hover, a.submit2:hover {
  color: rgba(30, 35, 35, 1.0);
  background-color: rgba(206, 206, 206, 1.0);
}

a.cancel {
  color: rgba(135, 135, 135, 1.0);
  background-color: transparent;
}

a.cancel:hover {
  color: rgba(0, 0, 0, 1.0);
}

a.submit2 {
  background-color: rgba(76, 216, 90, 1.0);
}

a.remove {
  background-color: rgba(200, 40, 40, 1.0);
}

a.remove:hover {
  background-color: rgba(0, 0, 0, 1.0);
  color: rgba(200, 40, 40, 1.0);
}

/* Navigation */

#topnav {
  background-color: rgba(60, 60, 60, 1.0);
  width: auto;
  margin: -1% 0rem;
  padding: 0.3rem 0rem 0 0rem;
}

#topnav ul {
  border-radius: 1.0em;
  padding-bottom: -2rem;
  line-height: 0.5rem;
}

#guide-nav ul {
  display: inline-block;
  margin: auto;
}

#navbar {
  text-align: justify;
  padding: 0;
}

 #navbar:after {
  content: '';
  width: 100%;
  display: inline-block; 
}

#navbar li {
  display: inline-block;
  font-family: 'Oswald', sans-serif;
  font-size: 1.4rem;
  position: relative;
  padding: 1.0rem;
}

#navbar li:first-child {
  padding-left: 16%;
}

#navbar li:last-child {
  padding-right: 16%;
}

#navbar a {
    color: rgba(255, 255, 255, 1.0);
}

#navbar a:hover {
  color: rgba(255, 110, 0, 1.0);
  border-bottom: 0.4rem solid rgba(255, 110, 0, 1.0);
  transition: border 0.2s ease-in-out;

}

nav ul li a {
  color: rgba(255, 110, 0, 1.0);
  text-decoration: none;
}

/* Color blocks */
.colorblock {
  color: rgb(255, 255, 255);
  display: inline-block;
  border-radius: 1.0rem;
  width: 12.0rem;
  height: 4.0rem;
  padding: 2.0rem;
  margin: 1.0rem;
  text-align: center;
  border: 1px solid rgba(30, 35, 35, 0.4);
}

.colorblock:hover {
  border-color: rgba(30, 35, 35, 1.0);
  transition: border 0.4s ease-in-out;
}

.colorblock span {
  font-size: 1.0rem;
}

.colorgrey {
  background-color: rgba(255, 255, 254, 1.0);
  color: rgba(30, 35, 35, 1.0);
}

.colordark {
  background-color: rgba(30, 35, 35, 1.0);
}

.colorwhite {
  background-color: rgba(0, 0, 0, 1.0);
}

.colorsub {
  background-color: rgba(135, 135, 135, 1.0);
}

.colororange {
  background-color: rgba(255, 110, 0, 1.0);
}

.colorblue {
  background-color: rgba(50, 169, 247, 1.0);
}

.colorgreen {
  background-color: rgba(100, 200, 40, 1.0);
}

.colornavgrey {
  background-color: rgba(60, 60, 60, 1.0);
}

/* Forms */

.input-wrapper {
  padding: 0.5rem;
}

input {
  padding: 0.5rem 3.0rem 0.5rem 0.5rem;
}

input.form-search {
  border-radius: 1.0rem;
  padding: 0.5rem 3.0rem 0.5rem 0.8rem;
}

